# voxy

./: .gitignore  LICENSE  Makefile  Makefile.am  bootstrap  configure.in  index.haml  index.html  qemuctl.sh  readme.txt  style.css  targets.cfg.example  voxy.py
client/: CUserId.js  ImageInfo.js  Makefile.am  index.html  keycode.js  main_code.js  menu.js  mouseevt.js  test.html  test.js  vnc.html  voxy.js  voxyview.css  voxyview.html  voxyview.js  xmlhttp.js
lib/: voxyproxy.py  voxyweb.py
pyvoxy/: targets.cfg.example
pyvoxy/lib/: voxycommon.py  voxyweb.py
pyvoxy/webfiles/: voxy.css
server/: Makefile.am
server/cpp/: AjaxClient.cpp  CVncErr.cpp  DispMan.cpp  EmuExec.cpp  FileMan.cpp  ImgTile.cpp  ImgTile.cpp~  ImgoutQue.cpp  Makefile  Makefile.am  Makefile~  RFBClient.cpp  RfbProtClient.cpp  Sentinel.cpp  UdpServerSock.cpp  Yavnc.cpp  analyze.cpp  client.cpp  common.cpp  d3des.cpp  genrand.cpp  global.cpp  global.cpp~  mockserver.cpp  mockserver.cpp~  mserver  rdp.cpp  rfbproto.cpp  rfbproto.cpp~  sexpr.cpp  socket.cpp  thread.cpp  userdata.cpp  vncauth.cpp  vncclient.cpp  vncclient.cpp~  vncsockets.cpp  vncsockets.cpp~
server/cpp/include/: AjaxClient.h  CVncErr.h  DispMan.h  EmuExec.h  FileMan.h  ImgTile.h  ImgTile.hpp  ImgTile.hpp~  ImgoutQue.h  RFBClient.h  RfbProtClient.h  SExpr.h  Sentinel.h  UdpServerSock.h  Yavnc.h  analyze.h  cmutex.h  common.h  common.hpp  common.hpp~  genrand.hpp  genrand.hpp~  global.hpp  global.hpp~  imgtile.h  imgtile.hpp~  rdp.hpp  rfbproto.hpp  sexpr.h  sexpr.hpp  socket.hpp  thread.h  types.h  userdata.h  vncauth.h  vncclient.hpp  vncclient.hpp~  vncsockets.hpp
server/wgw/: Makefile.am  app.rb  voxywgw.orig.rb  voxywgw.rb
webfiles/: nvoxy.html  nvoxy.js  voxy.css  voxy_single.js
