AC_INIT(server/cpp/sexpr.cpp)
AM_INIT_AUTOMAKE(voxy, 0.1)
AC_CONFIG_HEADER(server/cpp/include/config.h)

if test "" = "$CFLAGS"; then
  CFLAGS="-O2"
fi

if test "" = "$CXXFLAGS"; then
  CXXFLAGS="-O2"
fi

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
AX_BOOST_BASE(1.38)
AX_BOOST_THREAD
AX_BOOST_DATE_TIME
AX_BOOST_SYSTEM

AC_CHECK_LIB(stdc++,main, [], [AC_MSG_FAILURE([could not find stdc++])])
AC_CHECK_LIB(pthread,main, [], [AC_MSG_FAILURE([could not find pthread])])
AC_CHECK_LIB(png,main, [], [AC_MSG_FAILURE([could not find libpng])])
AC_CHECK_LIB(jpeg,main, [], [AC_MSG_FAILURE([could not find libjpeg])])
AC_CHECK_LIB(X11,main, [], [AC_MSG_FAILURE([could not find libX11])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h float.h memory.h netinet/in.h stdlib.h string.h sys/param.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([gethostbyname memset select socket])

# datadir
AX_DEFINE_DIR(DATADIR, datadir, [datadir])


# debug option
# from http://www.itojun.org/hack/autoconf/enable-debug.txt
AC_MSG_CHECKING(if --enable-debug option specified)
AC_ARG_ENABLE(debug,
	[  --enable-debug          Build a debugging version.],
	[ts_cv_debug="yes"], [ts_cv_debug="no"])
if test "$ts_cv_debug" = yes; then
	AC_DEFINE([DEBUG], [], [Define if you want to build debug version.])
	CXXFLAGS=${CXXFLAGS+"-g"}
fi
AC_MSG_RESULT($ts_cv_debug)

CXXFLAGS="$CXXFLAGS -Wall"

AC_OUTPUT([Makefile server/Makefile server/cpp/Makefile server/wgw/Makefile client/Makefile])
